--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.4"
   },
